force-app/main/default/objects/Team_Tasks__c/Team_Tasks__c.object-meta.xml
<CustomObject>
    <label>Team Tasks</label>
    <nameField>
        <label>Team Tasks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>