force-app/main/default/objects/Team_Tasks__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Team_Members__c</referenceTo>
    <relationshipLabel>Team Tasks</relationshipLabel>
    <relationshipName>Team_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>