force-app/main/default/objects/Team_Tasks__c/fields/Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Due_Date__c</fullName>
    <label>Task Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>