force-app/main/default/objects/Team_Tasks__c/fields/Tasks_Hours_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Hours_Estimated__c</fullName>
    <label>Tasks Hours Estimated</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>