force-app/main/default/objects/Team_Tasks__c/fields/Tasks_Status__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Status__c</fullName>
    <label>Tasks Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Do</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>