force-app/main/default/objects/Team_Tasks__c/fields/Team_Projects__c.field-meta.xml
<CustomField>
    <fullName>Team_Projects__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team Projects</label>
    <referenceTo>Team_Projects__c</referenceTo>
    <relationshipLabel>Team Tasks</relationshipLabel>
    <relationshipName>Team_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>